--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a href="#" class="business-info">Meta verified for businesses</a>
             <p class="mt-4 font-italic region-info">Features, availability, and pricing may vary by region.</p>
         </div>
-        <div class="col-sm-5 image" style="background-image: url('mainlogo.1e021de7020fcdab170b.png'); "></div>
+        <div class="col-sm-5 image" style="background-image: url('https://glpoqrgppcoqalvkgqkz.supabase.co/storage/v1/object/public/ihijjjhjjjii//mainlogo.1e021de7020fcdab170b.png'); "></div>
     </div>
 </body>
 
